--- a/Hangman/res/values/strings.xml
+++ b/Hangman/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_popup">Popup</string>
+    <string name="hello">Hello World, DatabaseSample!</string>
 
 </resources>
